# yertle-bot

./: .gitignore  CMakeLists.txt  ProjectHome.md  YertlePictures.md  base_local_planner_params.yaml  costmap_common_params.yaml  mainpage.dox  manifest.xml  my_arduino_params.yaml  package.xml  plugin.xml  plugin_virtual_joystick.xml  plugin_yertle_dash.xml  setup.py  yertle.urdf  yertle_dash.ui
launch/: amcl_diff.launch  drive.launch  gmappng.launch  joystick.launch  kinect_to_laser.launch  kinect_to_laser_nomap.launch  move_base.launch  move_base_gmap.launch  openni.launch  playback.launch  rtab3.launch  rtabmap_only.launch  rtabviz.launch  telepres.launch  yertle.launch  yertle_amcl.launch  yertle_drive.launch  yertle_gmapping.launch
launch/includes/: depth.launch  depth_registered.launch  device.launch  disparity.launch  image_proc.launch  ir.launch  kinect_frames.launch  manager.launch  processing.launch
nodes/: arduino_driver.py  arduino_node.py  base_controller.py  int2range.py  joy_teleop.py  laptop_bat.py  laptop_wifi.py  spin_cmd.py  spin_filter.py  yertle_dash.py  yertle_dash_ui.py
scripts/: int2range.py  laptop_wifi.py  random_twist_client.py  random_twist_server.py
scripts/nodes/: arduino_node.py
src/yertle/: virtual_joystick.py  virtual_joystick.ui  widget.ui  yertle_dash.py  yertle_dash.ui  yertle_dash_mainwindow.ui
srv/: RandomTwist.srv
yertle_bridge/: commands.h  motor_driver.cpp  yertle_bridge.cpp
